--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -4,3 +4,13 @@
 .font-2-xl {
   font: 600 5.125rem/1.2 "Bungee Outline", sans-serif;
 }
+.font-1-l {
+  font: 700 5.125rem/1 "Bebas Neue", sans-serif;
+}
+.font-2-l {
+  font: 400 3.875rem/1.3 "Bungee Outline", sans-serif;
+}
+.font-2-l {
+  font: 400 3.875rem/1.3 "Bungee Outline", sans-serif;
+}
+
