--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -10,7 +10,24 @@
 .font-2-l {
   font: 400 3.875rem/1.3 "Bungee Outline", sans-serif;
 }
-.font-2-l {
-  font: 400 3.875rem/1.3 "Bungee Outline", sans-serif;
+.font-1-l-b{
+  font: 500 5.125rem/0.83 "Bebas Neue", sans-serif;
 }
+.font-1-m{
+  font: 500 3.875rem/0.83 "Bebas Neue", sans-serif;
+}
+.font-1-m-b {
+  font: 500 2.625rem/0.83 "Bebas Neue", sans-serif;
+}
+.font-1-bn {
+  font: 500 2.625rem/0.83 "Bebas Neue", sans-serif;
+}
+.font-1-s {
+  font: 500 1.75rem/1.2 "Bebas Neue", sans-serif;
+}
+.font-3-xm {
+  font: 500 1.5rem/0.83 "Montserrat", sans-serif;
+}
+
+
 
