--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -28,6 +28,14 @@
 .font-3-xm {
   font: 500 1.5rem/0.83 "Montserrat", sans-serif;
 }
-
+.font-3-xm {
+  font: 500 1.125rem/1.05 "Montserrat", sans-serif;
+}
+.font-1-xs {
+  font: 500 1.125rem/1.05 "Montserrat", sans-serif;
+}
+.font-3-s {
+  font: 500 1.125rem/1.05 "Montserrat", sans-serif;
+}
 
 
