--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -32,10 +32,10 @@
   font: 500 1.125rem/1.05 "Montserrat", sans-serif;
 }
 .font-1-xs {
-  font: 500 1.125rem/1.05 "Montserrat", sans-serif;
+  font: 500 1rem/1.125 "Bebas Neue", sans-serif;
 }
 .font-3-s {
-  font: 500 1.125rem/1.05 "Montserrat", sans-serif;
+  font: 500 0.9375rem/1.3 "Bebas Neue", sans-serif;
 }
 
 
