--- a/css/cores.css
+++ b/css/cores.css
@@ -17,7 +17,7 @@
   --cor-p2: #BB1616;
   --cor-p3: #FE0202;
   --cor-p4: #FD3939;
-  --cor-s1: #FE5757;
+  --cor-p5: #FE5757;
   --cor-s1: #B4B4B4;
 }
 .cor-0 {
