--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,3 @@
-
 /* Estilos do Topo*/
 .mobile-navbar, .menu-items{
     display: none;
@@ -23,11 +22,13 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    
 }
 .menu .menu-item{
-    font-size: 24px;
-    font-family: 'Bebas Neue', sans-serif;
     margin-left: 30px;
+}
+.menu .menu-item a{
+    margin: auto;
 }
 .menu .menu-item:first-child{
     margin-left: 0;
@@ -53,45 +54,43 @@
 }
 
 @media (max-width: 768px){
-    .aberto{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        animation-name: rotacionar;
-        animation-duration: 1s;
-        background-color: #222;
-        height: 100vh;
-        list-style: none;
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        z-index: 0;
-        padding-top: 100px;
-    }
-    .menu-item{
-        margin-bottom: 50px;
-        font-family: 'Bebas Neue', sans-serif;
-        font-size: 24px;
-    }
-    .menu-item:hover{
-        opacity: 0.5;
-    }
-    .menu-item:last-of-type a{
-        position: fixed;
-        right: 0;
-        bottom: 0;
-        margin: 30px;
-        padding: 10px 20px;
-        background-color: #FF0202;
-        clip-path: polygon(82% 0, 100% 50%, 100% 100%, 0 100%, 0 0);
-    }
+.aberto{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    animation-name: rotacionar;
+    animation-duration: 1s;
+    background-color: #222;
+    height: 100vh;
+    list-style: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    z-index: 0;
+    padding-top: 100px;
+}
+.menu-item{
+    margin: 40px;
+}
+.menu-item:hover{
+    opacity: 0.5;
+}
+.menu-item:last-of-type a{
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    margin: 30px;
+    padding: 10px 20px;
+    background-color: #FF0202;
+    clip-path: polygon(82% 0, 100% 50%, 100% 100%, 0 100%, 0 0);
+}
     .menu-item:last-of-type a:hover{
         transform: scale(1.1);
-    }
+}
     .nav-bar{
         display: none;
-    }
+}
     .mobile-navbar{
     position: relative;
     z-index: 1;
@@ -100,23 +99,24 @@
     justify-content: space-between;
     flex-wrap: wrap;
     height: 80px;
-    }
+}
     .mobile-navbar .container-logo{
     width: 80%;
-    }
+}
     .mobile-menu div{
     transition-duration: 0.5s;
     margin: 8px 0px;
     width: 32px;
     height: 2px;
     background-color: #fff;
-    }
+}
     .menu-animacao .primeiro {
     transform: rotate(45deg) translate(3px, 7px);
-    }
+}
     .menu-animacao .segundo {
     transform: rotate(-45deg) translate(-1px, -5px);
-    }
-    .esconder{
-    display: none;
-    }
+}
+    .menu-animacao .terceiro {
+        display: none;
+}
+}
