--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -25,8 +25,8 @@
 .font-1-s {
   font: 500 1.75rem/1.2 "Bebas Neue", sans-serif;
 }
-.font-3-xm {
-  font: 500 1.5rem/0.83 "Montserrat", sans-serif;
+.font-1-b {
+  font: 500 1.5rem/0.83 "Bebas Neue", sans-serif;
 }
 .font-3-xm {
   font: 500 1.125rem/1.05 "Montserrat", sans-serif;
