--- a/css/tipografia.css
+++ b/css/tipografia.css
@@ -29,6 +29,9 @@
   font: 500 1.5rem/0.83 "Bebas Neue", sans-serif;
 }
 .font-3-xm {
+  font: 500 1.2rem/0.83 "Montserrat", sans-serif;
+}
+.font-3-m {
   font: 500 1.125rem/1.05 "Montserrat", sans-serif;
 }
 .font-1-xs {
