--- a/css/introducao.css
+++ b/css/introducao.css
@@ -57,15 +57,15 @@
 .paragrafo-introducao {
   margin-top: 10px;
 }
-.item-introducao {
+.item-introducao-diferenciais {
   display: inline-block;
   background: var(--cor-11);
-  margin-top: 40px;
+  margin-top: 30px;
   width: 200px;
   height: 56px;
   clip-path: polygon(0 0, 84% 0, 100% 38%, 100% 100%, 0 100%, 0% 50%);
 }
-.item-introducao a {
+.item-introducao-diferenciais a {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
