--- a/css/introducao.css
+++ b/css/introducao.css
@@ -77,29 +77,7 @@
   margin-left: 10px;
 }
 
-/* Letreiro */
-.letreiro-bg {
-  background: var(--cor-11);
-}
-.letreiro {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-  width: 1600px;
-  height: 56px;
-  animation: scrollLetreiro 20s linear infinite;
-}
-@keyframes scrollLetreiro {
-  from {
-    transform: translateX(100vw);
-  }
-  to {
-    transform: translateX(-100%);
-  }
-}   
-.letreiro img{
-  padding-right: 40px;
-  padding-left: 40px;
-}
 
+@media (max-width: 1500px) {
+
+}
