--- a/css/introducao.css
+++ b/css/introducao.css
@@ -1,7 +1,44 @@
+/* Estilos da Primeira Seção */
+
 .introducao-bg {
   background: var(--cor-p1);
 }
-/* Estilos da Primeira Seção */
+.introducao {
+  display: grid;
+  grid-template-columns: 1.3fr 1fr;
+  gap: 0px;
+  padding-top: 75px;
+}
+.informacao {
+  padding-top: 140px;
+  z-index: 2;
+}
+.imagem-introducao {
+  z-index: 2;
+  margin: 0px;
+}
+.paragrafo-introducao {
+  margin-top: 10px;
+}
+.item-introducao-diferenciais {
+  display: inline-block;
+  background: var(--cor-11);
+  margin-top: 30px;
+  width: 200px;
+  height: 56px;
+  clip-path: polygon(0 0, 84% 0, 100% 38%, 100% 100%, 0 100%, 0% 50%);
+}
+.item-introducao-diferenciais a {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  width: 200px;
+  height: 56px;
+}
+.item-introducao img {
+  margin-left: 10px;
+}
 .box-apresentacao{
   width: 100%;
   height: 702px;
@@ -40,44 +77,43 @@
   filter: drop-shadow(-5px 0px 10px rgba(0, 0, 0, 0.25));
   transform: translate(-300px, 0);
 }
-.introducao {
-  display: grid;
-  grid-template-columns: 1.3fr 1fr;
-  gap: 0px;
-  padding-top: 75px;
+@media (max-width: 1818px) {
+  .cor-primaria{
+    width: 0px;
+    right: 0;
+    border-left: 0px solid transparent;
+    border-bottom: 0px solid #FF5757;
 }
-.informacao {
-  padding-top: 140px;
-  z-index: 2;
+  .cor-secundaria{
+    width: 0px;
+    border-left: 0px solid transparent;
+    border-bottom: 0px solid #FF3939;
 }
-.imagem-introducao {
-  z-index: 2;
-  margin: 0px;
+  .cor-terciaria{
+    width: 0vw;
+    position: absolute;
+    z-index: 1;
+    border-left: 0px solid transparent;
+    border-bottom: 0px solid #FF0202;
 }
-.paragrafo-introducao {
-  margin-top: 10px;
 }
-.item-introducao-diferenciais {
-  display: inline-block;
-  background: var(--cor-11);
-  margin-top: 30px;
-  width: 200px;
-  height: 56px;
-  clip-path: polygon(0 0, 84% 0, 100% 38%, 100% 100%, 0 100%, 0% 50%);
+@media (max-width: 1145px) {
+  .informacao {
+    padding-top: 0px;
+  }
+  .introducao {
+    grid-template-columns:1fr;
 }
-.item-introducao-diferenciais a {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: center;
-  align-items: center;
-  width: 200px;
-  height: 56px;
+  .imagem-introducao {
+    display: none;
 }
-.item-introducao img {
-  margin-left: 10px;
 }
+@media (max-width: 600px) {
 
-
-@media (max-width: 1500px) {
-
+  .introducao .informacao h1 {
+    font: 400 2.75rem/1 "Bungee Outline", sans-serif;
+}
+  .introducao .informacao h1 span {
+    font: 400 5.125rem/1 "Bebas Neue", sans-serif;
+}
 }
