--- a/css/diferenciais.css
+++ b/css/diferenciais.css
@@ -3,7 +3,7 @@
 }
 .titulo-diferenciais {
     text-align: center;
-    padding-top: 160px;
+    padding: 160px 10px 10px 10px;
 }
 .diferenciais {
     display: grid;
@@ -18,15 +18,15 @@
 .diferenciais p {
     padding-top: 15px;
 }
-.item-introducao {
+.item-introducao-diferenciais {
     display: inline-block;
     background: var(--cor-11);
-    margin-top: 40px;
-    width: 187px;
-    height: 54px;
+    margin-top: 30px;
+    width: 200px;
+    height: 56px;
     clip-path: polygon(0 0, 84% 0, 100% 38%, 100% 100%, 0 100%, 0% 50%);
   }
-  .item-introducao a {
+  .item-introducao-diferenciais a {
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
@@ -34,6 +34,29 @@
     width: 200px;
     height: 56px;
   }
-  .item-introducao-diferenciais img {
+.item-introducao-diferenciais img {
     margin-left: 10px;
-  }
+}
+@media (max-width: 1200px) {
+.diferenciais {
+    grid-template-columns: 1fr 1fr;
+}
+.equipe, .ambiente, .aulas, .equipamentos {
+    background: var(--cor-11);
+    padding: 20px;
+}
+.item-introducao-diferenciais {
+    background: var(--cor-p1);
+}
+}
+@media (max-width: 600px) {
+.diferenciais {
+    grid-template-columns: 1fr;
+}
+.titulo-diferenciais h1 {
+    font: 2.5rem/1.5 "Bungee Outline", sans-serif;
+}
+.titulo-diferenciais h1 span {
+    font: 3.5rem/1.3 "Bebas Neue", sans-serif;
+}
+}
