--- a/css/introducao.css
+++ b/css/introducao.css
@@ -17,18 +17,18 @@
   z-index: 2;
   margin: 0px;
 }
-.paragrafo-introducao {
+.informacao p {
   margin-top: 10px;
 }
-.item-introducao-diferenciais {
+.item-introducao {
   display: inline-block;
   background: var(--cor-11);
-  margin-top: 30px;
-  width: 200px;
-  height: 56px;
+  margin-top: 40px;
+  width: 187px;
+  height: 54px;
   clip-path: polygon(0 0, 84% 0, 100% 38%, 100% 100%, 0 100%, 0% 50%);
 }
-.item-introducao-diferenciais a {
+.item-introducao a {
   display: flex;
   flex-wrap: nowrap;
   justify-content: center;
