--- a/css/diferenciais.css
+++ b/css/diferenciais.css
@@ -14,9 +14,14 @@
 }
 .imagem-ilustracao {
     padding-bottom: 10px;
+    margin-right: auto;
 }
 .diferenciais p {
     padding-top: 15px;
+    text-align: left;
+}
+.diferenciais h2 {
+    text-align: left;
 }
 .item-introducao-diferenciais {
     display: inline-block;
@@ -26,7 +31,7 @@
     height: 56px;
     clip-path: polygon(0 0, 84% 0, 100% 38%, 100% 100%, 0 100%, 0% 50%);
   }
-  .item-introducao-diferenciais a {
+.item-introducao-diferenciais a {
     display: flex;
     flex-wrap: nowrap;
     justify-content: center;
@@ -37,6 +42,7 @@
 .item-introducao-diferenciais img {
     margin-left: 10px;
 }
+
 @media (max-width: 1200px) {
 .diferenciais {
     grid-template-columns: 1fr 1fr;
