--- a/css/global.css
+++ b/css/global.css
@@ -1,50 +1,50 @@
 html, 
 body {
-  margin: 0px;
-  padding: 0px;
-  background: var(--cor-6);
-  overflow-x: hidden;
- 
+margin: 0px;
+padding: 0px;
+background: var(--cor-6);
+overflow-x: hidden;
+
 }
 h1,
 h2,
 h3,
 ul,
 p{
-  margin: 0px;
+margin: 0px;
 }
 *
 {
-  box-sizing: border-box;
+box-sizing: border-box;
 }
 
 ul {
-  margin: 0px;
-  padding: 0px;
-  list-style: none;
+margin: 0px;
+padding: 0px;
+list-style: none;
 }
 a {   
-  font: inherit;
-  color: inherit;
-  text-decoration: none;
+font: inherit;
+color: inherit;
+text-decoration: none;
 }
 img {
-  height: auto;
-  display: block;
-  max-width: 100%;
+height: auto;
+display: block;
+max-width: 100%;
 }
 ::-webkit-scrollbar {
-	width: 7px;
-	background-color: rgb(35, 38, 41);
+width: 7px;
+background-color: rgb(35, 38, 41);
 }
 ::-webkit-scrollbar-thumb {
-	background-color: var(--cor-p2);
-  border-radius: 30px;
+background-color: var(--cor-p2);
+border-radius: 30px;
 }
 ::-webkit-scrollbar-track {
-	background-color: transparent;
+background-color: transparent;
 }
 .center {
-  text-align: center;
-  margin: auto;
+text-align: center;
+margin: 0 auto;
 }
