--- a/css/global.css
+++ b/css/global.css
@@ -1,10 +1,19 @@
+::-webkit-scrollbar {
+  width: 12px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #d1cfcf;
+  border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #fff; 
+}
 html, 
 body {
 margin: 0px;
 padding: 0px;
 background: var(--cor-6);
 overflow-x: hidden;
-
 }
 h1,
 h2,
@@ -17,7 +26,6 @@ margin: 0px;
 {
 box-sizing: border-box;
 }
-
 ul {
 margin: 0px;
 padding: 0px;
@@ -47,4 +55,18 @@ background-color: transparent;
 .center {
 text-align: center;
 margin: 0 auto;
+}
+.largura-padrao{
+  max-width: 1280px;
+  width: 100%;
+  margin: 0 auto;
+}
+.espacamento-padrao{
+  padding: 0 32px;
+}
+.topo{
+  width: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 1;
 }
