--- a/css/header.css
+++ b/css/header.css
@@ -79,8 +79,7 @@
     position: fixed;
     right: 0;
     bottom: 0;
-    margin-bottom: 60px;
-    margin-right: 30px;
+    margin: 30px;
     padding: 10px 20px;
     background-color: #FF0202;
     clip-path: polygon(82% 0, 100% 50%, 100% 100%, 0 100%, 0 0);
