--- a/css/diferenciais.css
+++ b/css/diferenciais.css
@@ -2,7 +2,7 @@
 .diferenciais-bg {
 background: var(--cor-p1);
 }
-.titulo-diferenciais {
+.titulo-diferenciais h1 {
 text-align: center;
 padding: 160px 10px 10px 10px;
 }
@@ -62,8 +62,10 @@ grid-template-columns: 1fr;
 }
 .titulo-diferenciais h1 {
 font: 2.5rem/1.5 "Bungee Outline", sans-serif;
+padding-top: 114px;
 }
 .titulo-diferenciais h1 span {
 font: 3.5rem/1.3 "Bebas Neue", sans-serif;
+padding-bottom: 120px;
 }
 }
