--- a/css/contato.css
+++ b/css/contato.css
@@ -9,8 +9,8 @@ justify-content: center;
 align-items: center;
 }
 .container-conteudo {
-padding-top: 20px;
-padding-bottom: 20px;
+padding-top: 108px;
+padding-bottom: 108px;
 }
 .contato .container-conteudo p{
 padding-top: 30px;
@@ -72,7 +72,9 @@ width: 234px;
 height: 42px;
 }
 .contato .imagem-contato {
-margin-top: -108px;
+width: 440px;
+height: 617px;
+margin-top: -110px;
 z-index: 3;
 }
 @media (max-width: 1315px) {
