--- a/css/header.css
+++ b/css/header.css
@@ -11,6 +11,7 @@ z-index: 4;
 .ativo{
 backdrop-filter: blur(10px);
 background-color: rgba(255, 255, 255, 0.4);
+z-index: 999;
 }
 .nav-bar{
 display: flex;
