--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 @import "./componentes.css";
 @import "./introducao.css";
 @import "./diferenciais.css";
-@import "./letreiro.css";
+@import "./destaque.css";
 @import "./planos.css";
 @import "./vantagens.css";
 @import "./contato.css";
